<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sust.autosms.EditActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textInputLayout3"
                android:layout_alignStart="@+id/textInputLayout3"
                android:layout_below="@+id/textInputLayout5">

                <EditText
                    android:id="@+id/enter_number_edit"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/enter_name_edit"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:hint="@string/enter_number"
                    android:inputType="textPersonName|number"
                    tools:layout_editor_absoluteX="67dp"
                    tools:layout_editor_absoluteY="301dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout3"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/enter_answer_edit"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_answer"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textInputLayout2"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/textInputLayout2"
                android:layout_marginTop="23dp">

                <EditText
                    android:id="@+id/enter_name_edit"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textInputLayout2"
                    android:layout_alignLeft="@+id/textInputLayout3"
                    android:layout_alignStart="@+id/textInputLayout3"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_name"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="67dp"
                    tools:layout_editor_absoluteY="218dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textInputLayout"
                android:layout_alignStart="@+id/textInputLayout"
                android:layout_below="@+id/textInputLayout2"
                android:layout_marginTop="24dp">

                <EditText
                    android:id="@+id/enter_tags_edit"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_tags"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="@string/save"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="376dp" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
