<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="3dp"
        card_view:contentPadding="4dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:padding="16dp">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/item_number"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/item_number"
                android:text="Mom"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="3809900000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_below="@+id/item_name"
                android:layout_toRightOf="@+id/name_title"
                android:layout_toEndOf="@+id/name_title"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp" />

            <TextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/item_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="26dp"
                android:layout_marginStart="26dp"
                android:text="@string/name"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/number__title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tags__title"
                android:layout_alignEnd="@+id/name_title"
                android:layout_alignRight="@+id/name_title"
                android:text="@string/number"
                android:textAllCaps="false"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tags__title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/number__title"
                android:layout_alignRight="@+id/number__title"
                android:layout_below="@+id/item_number"
                android:layout_marginTop="20dp"
                android:text="@string/tags"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/answer__title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/tags__title"
                android:layout_alignRight="@+id/tags__title"
                android:layout_below="@+id/tags__title"
                android:layout_marginTop="32dp"
                android:text="@string/answer"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/item_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tags__title"
                android:layout_alignBottom="@+id/tags__title"
                android:layout_alignLeft="@+id/item_number"
                android:layout_alignStart="@+id/item_number"
                android:text="shopping, potato"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/answer__title"
                android:layout_alignBottom="@+id/answer__title"
                android:layout_alignLeft="@+id/item_tags"
                android:layout_alignStart="@+id/item_tags"
                android:text="Sorry, busy..."
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>